apps/production/apps/home-assistant/httproute-code-server.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: code-server
  namespace: home-assistant
  annotations:
    external-dns.alpha.kubernetes.io/hostname: code-server.home.lewelly.com
  labels:
    app.kubernetes.io/part-of: home-infra
spec:
  parentRefs:
    - name: home-gateway
      namespace: traefik
      sectionName: websecure
  hostnames:
    - code-server.home.lewelly.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: authelia-forwardauth
      backendRefs:
        - name: home-assistant-code-server
          port: 8443
